# copilot-sesion-1

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py
backend/tests/: test_auth.py
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx  index.css
